--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@500;700&display=swap');
 .App {
  height: 100vh;
  width : 100%;
@@ -33,9 +34,40 @@
 .buttonsconatiner{
   height: 40%;
   width :70%;
-  background-color: wheat;
+  
   transition: all 0.5s ease-in-out;
+  display: flex;
+  justify-content: space-around;
+  flex-direction: column;
+  align-items: center;
+}
 
+.menubuttonscontainer1{
+  cursor: pointer;
+  width:50px;
+  height:50px;
+  background-color: transparent;
+  border-radius: 10px 10px 10px 10px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  transition: all 0.2s ease-in-out;
+} 
+
+.icons{
+  color : #c8c8cb;
+  font-size: 2rem;
+}
+
+.menubuttonscontainer1:hover{
+  background-color: white;
+}
+.menubuttonscontainer1:hover .icons{
+  color : #2d2f37;
+}
+
+.menubuttonscontainer1animation{
+  display: none;
 }
 .menubuttonscontainer{
   cursor: pointer;
@@ -144,15 +176,15 @@ padding-left: 80px;
   width: 90%;
   line-height: 4.9rem;
   letter-spacing:3px;
- 
+  font-family: 'Open Sans', sans-serif;
 }
 .besthotels h5{
   color : rgba(255,255,255,0.5);
-  width: 90%;
+  width: 70%;
   font-size: 12px;
   letter-spacing: 1px;
   line-height: 17px;
-  
+  font-family: 'Open Sans', sans-serif;
   margin-top: -20px;
   /* align-self: flex-start; */
 }
@@ -177,7 +209,8 @@ align-items: center;
   cursor: pointer;
   border: 1px solid white;
   border-radius: 10px 10px 10px 10px;
-  font-weight: bold;
+  font-weight: bolder;
+  font-family: 'Open Sans', sans-serif;
 }
 .second{
   margin-left: 10px;
@@ -188,6 +221,96 @@ align-items: center;
 }
 /* .................................. */
 .images{
-background-color: blueviolet;
-flex : 1.3;
+
+flex : 0.8;
+display: grid;
+grid-gap:1em;
+padding-right: 2em;
+padding-top: 1em;
+padding-bottom: 2em;
+}
+.image{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 15px 15px 15px 15px;
+  overflow: hidden;
+}
+.image h2{
+  color : white;
+  text-transform: uppercase;
+  font-size: 2rem;
+  position: absolute;
+  font-family: 'Open Sans', sans-serif;
+  font-weight: 600;
+}
+.image1{
+  background-color: aqua;
+  grid-column: 1/3;
+  background: url('../src/images/1.jpg');
+  background-position: center;
+  background-size: cover;
+}
+.image2{
+  background-color: blanchedalmond;
+  grid-column: 1/3;
+  background: url('../src/images/3.jpg');
+  background-position: center;
+  background-size: cover;
+}
+.image3{
+  background-color: cadetblue;
+  grid-column: 3/5;
+  grid-row: 1/3;
+  background: url('../src/images/2.jpeg');
+  background-position: center;
+  background-size: cover;
+}
+.image4{
+  background-color: chartreuse;
+  grid-column: 1/5;
+  background: url('../src/images/4.jpg');
+  background-position: center;
+  background-size: cover;
+}
+.lastimage{
+  border-radius: 15px 15px 15px 15px;
+  overflow: hidden;
+}
+.lastimage h2{
+  color : white;
+  font-size: 2rem;
+  text-transform: uppercase;
+  height: 0.3rem;
+  font-family: 'Open Sans', sans-serif;
+  font-weight: 600;
+}
+.lastimage h6{
+  color :rgba(255, 255, 255, 0.486);
+  font-size: 1rem;
+  line-height: 0rem;
+  height: 0.2rem;
+  font-family: 'Open Sans', sans-serif;
+  font-weight: 300;
+  letter-spacing: 2px;
+}
+.backdrop{
+  width:100%;
+  height: 100%;
+  display: flex;
+  background-color: rgba(0, 0, 0, 0.404);
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+  padding-left: 2em;
+  cursor: pointer;
+}
+.backdrop1{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: rgba(0, 0, 0, 0.404);
+  width:100%;
+  height: 100%;
+  cursor: pointer;
 }
